# sudoku-rlvr

./: .gitignore  README.md  _launch.sh  env.sh  pyproject.toml  requirements.txt  run_easy.sh  run_experiment.sh  run_study.sh  setup.sh
configs/: curriculum.yaml  easy_curriculum.yaml  exp1_4x4.yaml  exp3_6x6.yaml  exp8_6x6_hard.yaml  quick4.yaml  smoke.yaml
docs/: EXPERIMENTS.md  METHODOLOGY.md  RESULTS.md
experiments/: REGISTRY.md  exp4_easy8.json  exp5_easy8.json  exp6_easy8.json  exp7_easy8.json  probe_8x8_base.json  probe_exp2stage0.json
experiments/exp1_4x4/: config.yaml  meta.json  summary.md  sweep.json  train_log_stage0.json  train_log_stage1.json  train_log_stage2.json  train_log_stage3.json  train_log_stage4.json  train_log_stage5.json
experiments/exp2_8x8/: config.yaml  meta.json  summary.md  sweep.json  train_log_stage0.json  train_log_stage1.json  train_log_stage2.json  train_log_stage3.json  train_log_stage4.json  train_log_stage5.json
experiments/exp3_6x6/: meta.json  summary.md  sweep.json  train_log_stage0.json  train_log_stage1.json  train_log_stage2.json  train_log_stage3.json  (+2 more)
results/: comparison.md  difficulty_sweep_base.json  difficulty_sweep_trained.json  frontier.md  observations.md  summary.csv  train_log_stage0_4x4.json  train_log_stage1_4x4.json  train_log_stage2_4x4.json  train_log_stage3_4x4.json  train_log_stage4_4x4.json
scripts/: ab_direct.py  difficulty_sweep.py  evaluate.py  frontier.py  log_experiment.py  make_data.py  monitor.py  plot.py  train.py
tests/: test_harness.py  test_rewards.py  test_sudoku.py
(+47 files in other folders)
